Fixed incorrect GitHub link

--- a/_config.yaml
+++ b/_config.yaml
@@ -9,7 +9,7 @@ url: /
 baseurl: /
 # site social media and other links
 links:
-  github: koyejo-lab
+  github: stair-lab
   twitter: stai_research
 
 ### jekyll settings
